[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrykit"
version = "0.1.0"
description = "Retry logic and circuit breakers with an identical API in Python and TypeScript."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "retrykit contributors" }]
keywords = ["retry", "circuit-breaker", "backoff", "resilience", "opentelemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/inmyuse/retrykit"
Repository = "https://github.com/inmyuse/retrykit"
Changelog = "https://github.com/inmyuse/retrykit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "opentelemetry-api>=1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["retrykit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["retrykit"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
files = ["retrykit"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]
